--- a/src/components/ModrinthButton.astro
+++ b/src/components/ModrinthButton.astro
@@ -6,15 +6,20 @@ type Props = HTMLAttributes<'a'>;
 const { href, class: className, ...props } = Astro.props;
 const pathname = Astro.url.pathname.replace(import.meta.env.BASE_URL, '');
 const subpath = pathname.match(/[^\/]+/g);
-const isActive = href === pathname || href === '/' + (subpath?.[0] || '');
 ---
 
-<a href={href} class:list={[className, { active: isActive }]} {...props}>
+<a href={href} class:list={[className]} {...props}>
 	<slot />
 </a>
 <style>
 	a {
 		display: inline-block;
-		text-decoration: none;
+        margin: 0;
+        padding: 0.25em 0.5em;
+        font-size: 1em;
+        color: var(--white) !important;
+        background-color: var(--accent);
+        text-decoration: none;
+        font-family: "Press Start 2P", sans-serif;
 	}
 </style>
