--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,37 +13,101 @@ import { SITE_DESCRIPTION, SITE_TITLE } from '../consts';
 	<body>
 		<Header />
 		<main>
-			<h1>🧑‍🚀 Hello, Astronaut!</h1>
-			<p>
-				Welcome to the official <a href="https://astro.build/">Astro</a> blog starter template. This
-				template serves as a lightweight, minimally-styled starting point for anyone looking to build
-				a personal website, blog, or portfolio with Astro.
-			</p>
-			<p>
-				This template comes with a few integrations already configured in your
-				<code>astro.config.mjs</code> file. You can customize your setup with
-				<a href="https://astro.build/integrations">Astro Integrations</a> to add tools like Tailwind,
-				React, or Vue to your project.
-			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
-			<ul>
-				<li>Edit this page in <code>src/pages/index.astro</code></li>
-				<li>Edit the site header items in <code>src/components/Header.astro</code></li>
-				<li>Add your name to the footer in <code>src/components/Footer.astro</code></li>
-				<li>Check out the included blog posts in <code>src/content/blog/</code></li>
-				<li>Customize the blog post page layout in <code>src/layouts/BlogPost.astro</code></li>
-			</ul>
-			<p>
-				Have fun! If you get stuck, remember to
-				<a href="https://docs.astro.build/">read the docs</a>
-				or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out
-				<a href="https://github.com/Charca/astro-blog-template">astro-blog-template</a>
-				by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
+			<h1 class="pageheader">Eikthyr Projects</h1>
+			<div class="project-boxes">
+				<a href="/harmony" class="project-box harmony">
+					<h2>Harmony</h2>
+				</a>
+				<a href="/blacksmith" class="project-box blacksmith">
+					<h2>Blacksmith</h2>
+				</a>
+				<a href="/excalibur" class="project-box excalibur">
+					<h2>Excalibur</h2>
+				</a>
+				<a href="/portalmodpack" class="project-box portalmp">
+					<h2>PortalMP</h2>
+				</a>
+				<a href="/bioshockmodpack" class="project-box bioshockmp">
+					<h2>BioshockMP</h2>
+				</a>
+				<a href="/glowlichenfix" class="project-box glowlichenfix">
+					<h2>GlowLichenFix</h2>
+				</a>
+			</div>
 		</main>
 		<Footer />
 	</body>
 </html>
+<style>
+	body {
+		background-color: var(--white);
+	}
+	a {
+		color: black;
+	}
+
+	.pageheader {
+		display: flex;
+		justify-content: center;
+		text-align: center;
+		margin-bottom: 1em;
+		font-size: 2em;
+	}
+
+	.project-boxes {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		gap: 1em;
+		margin: 0;
+		padding: 0;
+	}
+	.project-box {
+		display: flex;
+		justify-content: center;
+		margin: 0;
+		padding: 2em 2em 1em 2em;
+		width: auto;
+		height: auto;
+		font-size: 1em;
+		text-decoration: none;
+	}
+	.harmony {
+		background-color: #fed315;
+	}
+	.blacksmith {
+		background-color: #363636;
+		color: #fff;
+	}
+	.excalibur {
+		background-color: #090029;
+		color: #fff;
+	}
+	.portalmp {
+		background-color: #0044ff;
+		color: #fff;
+	}
+	.bioshockmp {
+		background-color: #382000;
+		color: #fff;
+	}
+	.glowlichenfix {
+		background-color: #6d897e;
+		color: #fff;
+	}
+
+	@media (max-width: 500px) {
+		.pageheader {
+			font-size: 1.5em;
+		}
+		.project-box {
+			font-size: 0.4em;
+		}
+		.project-boxes {
+			display: grid;
+			grid-template-columns: 1fr;
+			gap: 1em;
+			margin: 0;
+			padding: 0;
+		}
+	}
+</style>
