--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,53 +1,43 @@
-/*
-  The CSS in this style tag is based off of Bear Blog's default CSS.
-  https://github.com/HermanMartinus/bearblog/blob/297026a877bc2ab2b3bdfbd6b9f7961c350917dd/templates/styles/blog/default.css
-  License MIT: https://github.com/HermanMartinus/bearblog/blob/master/LICENSE.md
- */
-
 :root {
-	--accent: #2337ff;
-	--accent-dark: #000d8a;
-	--black: 15, 18, 25;
-	--gray: 96, 115, 159;
-	--gray-light: 229, 233, 240;
-	--gray-dark: 34, 41, 57;
-	--gray-gradient: rgba(var(--gray-light), 50%), #fff;
-	--box-shadow:
-		0 2px 6px rgba(var(--gray), 25%), 0 8px 24px rgba(var(--gray), 33%), 0 16px 32px
-		rgba(var(--gray), 33%);
+	--accent: #0db50d;
+	--black: #000;
+	--white: #fff;
+	--header-height: 3.65rem;
 }
 @font-face {
-	font-family: "Atkinson";
-	src: url("/fonts/atkinson-regular.woff") format("woff");
-	font-weight: 400;
+	font-family: 'Press Start 2P';
 	font-style: normal;
 	font-display: swap;
+	font-weight: 400 700;
+	src: url(https://cdn.jsdelivr.net/fontsource/fonts/press-start-2p@latest/latin-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/press-start-2p@latest/latin-400-normal.woff) format('woff');
+	unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
 @font-face {
-	font-family: "Atkinson";
-	src: url("/fonts/atkinson-bold.woff") format("woff");
-	font-weight: 700;
+	font-family: 'Inter Variable';
 	font-style: normal;
 	font-display: swap;
+	font-weight: 100 900;
+	src: url(https://cdn.jsdelivr.net/fontsource/fonts/inter:vf@latest/latin-wght-normal.woff2) format('woff2-variations');
+	unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
 }
+
 body {
-	font-family: "Atkinson", sans-serif;
+	font-family: "Press Start 2P", sans-serif;
 	margin: 0;
 	padding: 0;
 	text-align: left;
-	background: linear-gradient(var(--gray-gradient)) no-repeat;
+	background: var(--white) no-repeat;
 	background-size: 100% 600px;
 	word-wrap: break-word;
 	overflow-wrap: break-word;
-	color: rgb(var(--gray-dark));
+	color: var(--black);
 	font-size: 20px;
 	line-height: 1.7;
 }
 main {
-	width: 720px;
-	max-width: calc(100% - 2em);
+	max-width: calc(100% - 0.75em);
 	margin: auto;
-	padding: 3em 1em;
+	padding: 1em;
 }
 h1,
 h2,
@@ -107,7 +97,7 @@ img {
 }
 code {
 	padding: 2px 5px;
-	background-color: rgb(var(--gray-light));
+	background-color: var(--white);
 	border-radius: 2px;
 }
 pre {
@@ -125,7 +115,7 @@ blockquote {
 }
 hr {
 	border: none;
-	border-top: 1px solid rgb(var(--gray-light));
+	border-top: 1px solid var(--white);
 }
 @media (max-width: 720px) {
 	body {
@@ -152,4 +142,65 @@ hr {
 	clip-path: inset(50%);
 	/* added line to stop words getting smushed together (as they go onto separate lines and some screen readers do not understand line feeds as a space */
 	white-space: nowrap;
+}
+
+/* Project stuff */
+
+.project-logo {
+	padding: 0;
+	margin: 0.5em auto;
+	width: 6rem;
+	height: 6rem;
+	border: var(--white) 2px solid;
+	border-radius: 10px;
+	display: flex;
+}
+.project-title {
+	font-size: 4em;
+}
+.project-desc {
+	font-size: 1em;
+	margin: 1em auto;
+}
+.project-center {
+	text-align: center;
+}
+
+.fps-compare {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 24px;
+	gap: 0.5rem;
+}
+.fps-compare-box {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	border: 2px solid var(--white);
+	border-radius: 7.5px;
+	margin: 0;
+	padding: 0.5rem 1rem 0.5rem 1rem;
+	width: 10em;
+}
+.fps-compare-box h3 {
+	font-weight: 400;
+	font-size: 1em;
+	margin: 0;
+	padding: 0;
+}
+.fps-compare-box p {
+	font-size: 2em;
+	margin: 0;
+	padding: 0;
+}
+
+@media (max-width: 500px) {
+	.fps-compare {
+		flex-direction: column;
+	}
+	.project-title {
+		font-size: 3em;
+	}
 }
