Added sponsor link

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ const today = new Date();
 ---
 
 <footer>
-	<a href="" class="sponsor">
+	<a href="https://ultraservers.com/stovonson" class="sponsor">
 		<img src="/ultraservers.png" class="sponsors" alt="Ultraservers">
 	</a>
 	<p>An Eikthyr Production.</p>
