--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,7 +13,7 @@ import { SITE_DESCRIPTION, SITE_TITLE } from '../consts';
 	<body>
 		<Header />
 		<main>
-			<h1 class="pageheader">Eikthyr Projects</h1>
+			<h1 class="pageheader">ceilingash Projects</h1>
 			<div class="project-boxes">
 				<a href="/harmony" class="project-box harmony">
 					<h2>Harmony</h2>
