--- a/src/components/ModrinthButton.astro
+++ b/src/components/ModrinthButton.astro
@@ -17,7 +17,7 @@ const subpath = pathname.match(/[^\/]+/g);
         margin: 0;
         padding: 0.25em 0.5em;
         font-size: 1em;
-        color: var(--white) !important;
+        color: #fff !important;
         background-color: var(--accent);
         text-decoration: none;
         font-family: "Press Start 2P", sans-serif;
