--- a/src/pages/bioshockmodpack.astro
+++ b/src/pages/bioshockmodpack.astro
@@ -10,7 +10,7 @@ import ModrinthButton from '../components/ModrinthButton.astro';
 		<BaseHead title="BioshockMP" description="Bioshock in Minecraft!" />
 		<style>
 			body {
-				color: var(--white);
+				color: var(--text-dark-bg);
 				background-color: #382000;
 				font-family: 'Inter Variable', sans-serif;
 			}
