--- a/src/pages/blacksmith.astro
+++ b/src/pages/blacksmith.astro
@@ -10,6 +10,7 @@ import ModrinthButton from '../components/ModrinthButton.astro';
 		<BaseHead title="Blacksmith - Forge Optimized" description="The best way to play with Forge." />
 		<style>
 			body {
+				color: var(--text-light-bg);
 				background-color: #969696;
 				font-family: 'Inter Variable', sans-serif;
 			}
