--- a/src/pages/excalibur.astro
+++ b/src/pages/excalibur.astro
@@ -10,7 +10,7 @@ import ModrinthButton from '../components/ModrinthButton.astro';
 		<BaseHead title="Excalibur - Flawless Forge" description="The better way to play Forge." />
 		<style>
 			body {
-				color: var(--white);
+				color: var(--text-dark-bg);
 				background-color: #090029;
 				font-family: 'Inter Variable', sans-serif;
 			}
