--- a/src/pages/glowlichenfix.astro
+++ b/src/pages/glowlichenfix.astro
@@ -10,7 +10,7 @@ import ModrinthButton from '../components/ModrinthButton.astro';
 		<BaseHead title="Glow Lichen Fix" description="Stop getting annoyed at those fake diamonds!" />
 		<style>
 			body {
-				color: var(--white);
+				color: var(--text-light-bg);
 				background-color: #6d897e;
 				font-family: 'Inter Variable', sans-serif;
 			}
