--- a/src/pages/harmony.astro
+++ b/src/pages/harmony.astro
@@ -10,6 +10,7 @@ import ModrinthButton from '../components/ModrinthButton.astro';
 		<BaseHead title="Harmony - Absolute Optimization" description="All optimization packs in one." />
 		<style>
 			body {
+				color: var(--text-light-bg);
 				background-color: #fed315;
 				font-family: 'Inter Variable', sans-serif;
 			}
