--- a/src/pages/portalmodpack.astro
+++ b/src/pages/portalmodpack.astro
@@ -10,7 +10,7 @@ import ModrinthButton from '../components/ModrinthButton.astro';
 		<BaseHead title="PortalMP" description="Portal in Minecraft!" />
 		<style>
 			body {
-				color: var(--white);
+				color: var(--text-dark-bg);
 				background-color: #0044ff;
 				font-family: 'Inter Variable', sans-serif;
 			}
