--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -42,19 +42,29 @@
   [data-theme="dark"] .dark-icon {
     display: inline;
   }
+  @media (max-width: 1130px) {
+    button {
+      margin: 0;
+    }
+    button:hover,
+	  button.active {
+	  	text-decoration: none;
+	  	background-color: none;
+	  	color: none;
+	  }
+  }
 </style>
 
 <script>
   const toggleButton = document.querySelector('#theme-toggle');
   
-  function setTheme(theme: string) {
-    document.documentElement.setAttribute('data-theme', theme);
-    localStorage.setItem('theme', theme);
-  }
-  
   toggleButton?.addEventListener('click', () => {
-    const current = document.documentElement.getAttribute('data-theme');
-    const newTheme = current === 'dark' ? 'light' : 'dark';
-    setTheme(newTheme);
+    const newTheme = document.documentElement.getAttribute('data-theme') === 'dark' ? 'light' : 'dark';
+    if (newTheme === 'light') {
+      document.documentElement.removeAttribute('data-theme');
+    } else {
+      document.documentElement.setAttribute('data-theme', 'dark');
+    }
+    localStorage.setItem('theme', newTheme);
   });
 </script>
