--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,7 @@
 :root {
 	--accent: #0db50d;
+	--text-light-bg: #000;
+	--text-dark-bg: #fff;
 	--black: #000;
 	--white: #fff;
 	--header-height: 3.65rem;
@@ -158,7 +160,6 @@ hr {
 	margin: 0.5em auto;
 	width: 6rem;
 	height: 6rem;
-	border: var(--white) 2px solid;
 	border-radius: 10px;
 	display: flex;
 }
@@ -185,7 +186,6 @@ hr {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
-	border: 2px solid var(--white);
 	border-radius: 7.5px;
 	margin: 0;
 	padding: 0.5rem 1rem 0.5rem 1rem;
