--- a/src/components/ThemeToggle.astro
+++ b/src/components/ThemeToggle.astro
@@ -25,6 +25,7 @@
   }
 
   button:hover,
+  button:focus,
 	button.active {
 		text-decoration: none;
 		background-color: var(--accent);
@@ -47,6 +48,7 @@
       margin: 0;
     }
     button:hover,
+    button:focus,
 	  button.active {
 	  	text-decoration: none;
 	  	background-color: none;
