--- a/src/pages/bioshockmodpack.astro
+++ b/src/pages/bioshockmodpack.astro
@@ -32,8 +32,8 @@ import ModrinthButton from '../components/ModrinthButton.astro';
 	</head>
 	<body>
 		<Header />
-		<main>
-			<img src="/bioshock/logo.png" class="project-logo">
+		<main id="main">
+			<img src="/bioshock/logo.png" alt="" class="project-logo">
 			<h1 class="project-center project-title">The Bioshock Modpack</h1>
 			<h2 class="project-center">Bioshock in Minecraft!</h2>
 			<p class="project-desc">Create waterscrapers, U-Invent something and find out the difference between a man and a slave! Would you kindly try it out?</p>
