--- a/src/pages/blacksmith.astro
+++ b/src/pages/blacksmith.astro
@@ -32,8 +32,8 @@ import ModrinthButton from '../components/ModrinthButton.astro';
 	</head>
 	<body>
 		<Header />
-		<main>
-			<img src="/blacksmith/logo.png" class="project-logo">
+		<main id="main">
+			<img src="/blacksmith/logo.png" alt="" class="project-logo">
 			<h1 class="project-center project-title">Blacksmith</h1>
 			<h2 class="project-center">The best way to play with Forge.</h2>
 			<div class="fps-compare">
