--- a/src/pages/harmony.astro
+++ b/src/pages/harmony.astro
@@ -32,8 +32,8 @@ import ModrinthButton from '../components/ModrinthButton.astro';
 	</head>
 	<body>
 		<Header />
-		<main>
-			<img src="/harmony/logo.svg" class="project-logo" style="border-color: var(--black) !important;">
+		<main id="main">
+			<img src="/harmony/logo.svg" alt="" class="project-logo" style="border-color: var(--black) !important;">
 			<h1 class="project-center project-title">Harmony</h1>
 			<h2 class="project-center">All optimization packs in one.</h2>
 			<div class="fps-compare">
