--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import { SITE_DESCRIPTION, SITE_TITLE } from '../consts';
 	</head>
 	<body>
 		<Header />
-		<main>
+		<main id="main">
 			<h1 class="pageheader">ceilingash Projects</h1>
 			<div class="project-boxes">
 				<a href="/harmony" class="project-box harmony">
