--- a/src/components/ModrinthButton.astro
+++ b/src/components/ModrinthButton.astro
@@ -18,6 +18,7 @@ const subpath = pathname.match(/[^\/]+/g);
         padding: 0.25em 0.5em;
         font-size: 1em;
         color: #fff !important;
+        font-weight: bold;
         background-color: var(--accent);
         text-decoration: none;
         font-family: "Press Start 2P", sans-serif;
