--- a/src/pages/excalibur.astro
+++ b/src/pages/excalibur.astro
@@ -32,8 +32,8 @@ import ModrinthButton from '../components/ModrinthButton.astro';
 	</head>
 	<body>
 		<Header />
-		<main>
-			<img src="/excalibur/logo.png" class="project-logo">
+		<main id="main">
+			<img src="/excalibur/logo.png" alt="" class="project-logo">
 			<h1 class="project-center project-title">Excalibur</h1>
 			<h2 class="project-center">The better way to play Forge.</h2>
 			<p class="project-desc">Make your old Minecraft worlds a bit more interesting! Experience the wonder of the ocean with Oceanic Expanse, a more detailed landscape with Additional Structures and so much more.</p>
