--- a/src/pages/glowlichenfix.astro
+++ b/src/pages/glowlichenfix.astro
@@ -32,8 +32,8 @@ import ModrinthButton from '../components/ModrinthButton.astro';
 	</head>
 	<body>
 		<Header />
-		<main>
-			<img src="/glf/logo.png" class="project-logo">
+		<main id="main">
+			<img src="/glf/logo.png" alt="" class="project-logo">
 			<h1 class="project-center project-title">Glow Lichen Fix</h1>
 			<h2 class="project-center">Stop getting annoyed at those fake diamonds!</h2>
 			<p class="project-desc">This pack turns glow lichen blocks into an alternative vine.</p>
