--- a/src/pages/portalmodpack.astro
+++ b/src/pages/portalmodpack.astro
@@ -32,8 +32,8 @@ import ModrinthButton from '../components/ModrinthButton.astro';
 	</head>
 	<body>
 		<Header />
-		<main>
-			<img src="/portal/logo.png" class="project-logo">
+		<main id="main">
+			<img src="/portal/logo.png" alt="" class="project-logo">
 			<h1 class="project-center project-title">The Portal Modpack</h1>
 			<h2 class="project-center">Portal in Minecraft!</h2>
 			<p class="project-desc">The Portal Modpack blends the physics-defying portal mechanics of the Portal series with Minecraft's creative freedom, letting you craft and solve puzzles.</p>
